--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,7 @@ header {
   width: 100%;
   padding: 1.25rem 2rem;
   display: flex;
+  margin-inline: auto;
   align-items: center;
   justify-content: space-between;
 
